--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,21 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+     	<distributionManagement>
+	
+	    <repository>
+	      <id>nexus</id>
+	      <name>sample-release </name>
+	      <url>http://16.16.173.181:8081/repository/flipkart-release/</url>
+	    </repository>
+	    
+	    <snapshotRepository>
+	      <id>nexus</id>
+	      <name>sample-snapshots </name>
+	      <url>http://16.16.173.181:8081/repository/flipkart-snapshot/</url>
+	    </snapshotRepository>
+	    
+	</distributionManagement>    
 
   <build>
     <finalName>hello-world-war</finalName>
