--- a/pom.xml
+++ b/pom.xml
@@ -35,20 +35,15 @@
     </dependency>
   </dependencies>
      	<distributionManagement>
-	
-	    <repository>
-	      <id>nexus</id>
-	      <name>sample-release </name>
-	      <url>http://16.16.173.181:8081/repository/sample-release/</url>
-	    </repository>
-	    
-	    <snapshotRepository>
-	      <id>nexus</id>
-	      <name>sample-snapshots </name>
-	      <url>http://16.16.173.181:8081/repository/sample-snapshots/</url>
-	    </snapshotRepository>
-	    
-	</distributionManagement>    
+        <repository>
+            <id>nexus-releases</id>
+            <url>http://3.138.36.32:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <url>http://3.138.36.32:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 
   <build>
     <finalName>hello-world-war</finalName>
